--- a/config.json
+++ b/config.json
@@ -1,1 +1,314 @@
+{
+    "general": {
+        "title": "Ethexium"
+    },
+    "tokens": [
+        {
+            "symbol": "usdt",
+            "name": "Tether USD",
+            "primaryColor": "#ffffff",
+            "icon": "assets/icons/usdt.svg",
+            "addresses": {
+                "1": "0xdac17f958d2ee523a2206206994597c13d831ec7"
+            },
+            "decimals": 6,
+            "displayDecimals": 2
+        },
+        {
+            "symbol": "weth",
+            "name": "Wrapped Ether",
+            "primaryColor": "#3333ff",
+            "icon": "assets/icons/weth.svg",
+            "addresses": {
+                "1": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
+                "3": "0xc778417e063141139fce010982780140aa0cd5ab",
+                "4": "0xc778417e063141139fce010982780140aa0cd5ab",
+                "42": "0xd0a1e359811322d97991e03f863a0c30c2cf029c",
+                "50": "0x0b1ba0af832d7c05fd64161e0db78e85978e8082"
+            },
+            "decimals": 18,
+            "displayDecimals": 2
+        },
+        {
+            "decimals": 18,
+            "symbol": "tusd",
+            "name": "True USD",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/tusd.svg",
+            "addresses": {
+                "1": "0x0000000000085d4780B73119b644AE5ecd22b376"
+                }
+        },
+        {
+            "decimals": 6,
+            "symbol": "usdc",
+            "name": "USD Coin",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/usdc.svg",
+            "addresses": {
+                "1": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
+                }
+        },
+        {
+            "decimals": 18,
+            "symbol": "bnb",
+            "name": "BNB Token",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/bnb.svg",
+            "addresses": {
+                "1": "0xB8c77482e45F1F44dE1745F52C74426C631bDD52"
+                }
+        },
+        {
+            "decimals": 18,
+            "symbol": "link",
+            "name": "ChainLink",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/link.svg",
+            "addresses": {
+                "1": "0x514910771af9ca656af840dff83e8264ecf986ca"
+                }
+        },
+        {
+            "decimals": 18,
+            "symbol": "okb",
+            "name": "OKB",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/okb.svg",
+            "addresses": {
+                "1": "0x75231f58b43240c9718dd58b4967c5114342a86c"
+                }
+        },
+        {
+            "decimals": 18,
+            "symbol": "ht",
+            "name": "Huobi Token",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/ht.svg",
+            "addresses": {
+                "1": "0x6f259637dcd74c767781e37bc6133cd6a68aa161"
+                }
+        },
+        {
+            "decimals": 18,
+            "symbol": "pax",
+            "name": "Paxos Standard",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/pax.svg",
+            "addresses": {
+                "1": "0x8e870d67f660d95d5be530380d0ec0bd388289e1"
+                }
+        },
+        {
+            "decimals": 18,
+            "symbol": "etex",
+            "name": "Ethexium",
+            "primaryColor": "#ffffff",
+            "icon": "assets/icons/etex.svg",
+            "addresses": {
+                "1": "0x712e32d339a46105649aec084c77b6b428502f86"
+            }
+        },        
+        {
+            "decimals": 18,
+            "symbol": "zrx",
+            "name": "0x Protocol Token",
+            "primaryColor": "#333333",
+            "icon": "assets/icons/zrx.svg",
+            "addresses": {
+                "1": "0xE41d2489571d322189246DaFA5ebDe1F4699F498",
+                "3": "0xff67881f8d12f372d91baae9752eb3631ff0ed00",
+                "4": "0x8080c7e4b81ecf23aa6f877cfbfd9b0c228c6ffa",
+                "42": "0x2002d3812f58e35f0ea1ffbf80a75a38c32175fa",
+                "50": "0x871dd7c2b4b25e1aa18728e9d5f2af4c4e431f5c"
+            }
+        },
+        {
+            "decimals": 18,
+            "symbol": "dai",
+            "name": "Dai",
+            "icon": "assets/icons/dai.svg",
+            "primaryColor": "#DEA349",
+            "addresses": {
+                "1": "0x6b175474e89094c44da98b954eedeac495271d0f",
+                "3": "0xfc8862446cd3e4a2e7167e7d97df738407fead07",
+                "4": "0x6f2d6ff85efca691aad23d549771160a12f0a0fc",
+                "42": "0xc4375b7de8af5a38a93548eb8453a498222c4ff2",
+                "50": "0x34d402f14d58e001d8efbe6585051bf9706aa064"
+            }
+        },
+        {
+            "decimals": 18,
+            "symbol": "mkr",
+            "name": "Maker",
+            "primaryColor": "#68CCBB",
+            "icon": "assets/icons/mkr.svg",
+            "addresses": {
+                "1": "0x9f8F72aA9304c8B593d555F12eF6589cC3A579A2",
+                "3": "0x06732516acd125b6e83c127752ed5f027e1b276e",
+                "4": "0xb763e26cd6dd09d16f52dc3c60ebb77e46b03290",
+                "42": "0x7B6B10CAa9E8E9552bA72638eA5b47c25afea1f3",
+                "50": "0x34d402f14d58e001d8efbe6585051bf9706aa064"
+            }
+        },
+        {
+            "decimals": 18,
+            "symbol": "rep",
+            "name": "Augur",
+            "icon": "assets/icons/rep.svg",
+            "primaryColor": "#512D80",
+            "addresses": {
+                "1": "0x1985365e9f78359a9B6AD760e32412f4a445E862",
+                "3": "0xb0b443fe0e8a04c4c85e8fda9c5c1ccc057d6653",
+                "4": "0x6a732d537daf79d75efaeae286d30fc578fa98d0",
+                "42": "0x8CB3971b8EB709C14616BD556Ff6683019E90d9C",
+                "50": "0x25b8fe1de9daf8ba351890744ff28cf7dfa8f5e3"
+            }
+        },
+        {
+            "decimals": 9,
+            "symbol": "dgx",
+            "name": "DigixDao",
+            "icon": "assets/icons/dgx.svg",
+            "primaryColor": "#E1AA3E",
+            "addresses": {
+                "1": "0xE0B7927c4aF23765Cb51314A0E0521A9645F0E2A",
+                "3": "0xc4895a5aafa2708d6bc1294e20ec839aad156b1d",
+                "4": "0xc40a46ca4bc8e6057ed571e39cf400f3f935e4d5",
+                "42": "0xA4f468c9c692eb6B4b8b06270dAe7A2CfeedcDe9",
+                "50": "0xcdb594a32b1cc3479d8746279712c39d18a07fc0"
+            }
+        },
+        {
+            "decimals": 18,
+            "symbol": "mln",
+            "name": "Melon",
+            "icon": "assets/icons/mln.svg",
+            "primaryColor": "#333333",
+            "addresses": {
+                "1": "0xec67005c4E498Ec7f55E092bd1d35cbC47C91892",
+                "3": "0x823ebe83d39115536274a8617e00a1ff3544fd63",
+                "4": "0x521c0941300a18a4edc697368f43a6a870be1f3d",
+                "42": "0x17e394D1Df6cE29d042195Ea38411A98ff3Ead94",
+                "50": "0x1e2f9e10d02a6b8f8f69fcbf515e75039d2ea30d"
+            }
+        }
+    ],
+    "pairs": [
+        {
+            "base": "usdt",
+            "quote": "weth"
+        },
+        {
+            "base": "usdt",
+            "quote": "bnb"
+        },
+        {
+            "base": "usdt",
+            "quote": "link"
+        },
+        {
+            "base": "usdt",
+            "quote": "okb"
+        },
+        {
+            "base": "usdt",
+            "quote": "ht"
+        },
+        {
+            "base": "usdt",
+            "quote": "pax"
+        },
+        {
+            "base": "usdt",
+            "quote": "etex"
+        },
+        {
+            "base": "usdt",
+            "quote": "zrx"
+        },
+        {
+            "base": "usdt",
+            "quote": "mkr"
+        },
+        {
+            "base": "usdt",
+            "quote": "rep"
+        },
+        {
+            "base": "tusd",
+            "quote": "weth"
+        },
+        {
+            "base": "usdc",
+            "quote": "weth"
+        },
+        {
+            "base": "bnb",
+            "quote": "weth"
+        },
+        {
+            "base": "link",
+            "quote": "weth"
+        },
+        {
+            "base": "okb",
+            "quote": "weth"
+        },
+        {
+            "base": "ht",
+            "quote": "weth"
+        },
+        {
+            "base": "pax",
+            "quote": "weth"
+        },
+        {
+            "base": "etex",
+            "quote": "weth"
+        },
+        {
+            "base": "zrx",
+            "quote": "weth"
+        },
+        {
+            "base": "zrx",
+            "quote": "dai"
+        },
+        {
+            "base": "weth",
+            "quote": "dai"
+        },
+        {
+            "base": "mkr",
+            "quote": "weth"
+        },
+        {
+            "base": "mln",
+            "quote": "weth"
+        },
+        {
+            "base": "dgx",
+            "quote": "weth"
+        },
+        {
+            "base": "rep",
+            "quote": "weth"
+        }
+    ],
+    "marketFilters": [
+        {
+            "text": "USDT",
+            "value": "usdt"
+        },
+        {
+            "text": "ETH",
+            "value": "weth"
+        },
+        {
+            "text": "ETEX",
+            "value": "etex"
+        }
+    ]
+}
 
